[gd_scene load_steps=5 format=3 uid="uid://bj67e35cxlvj7"]

[ext_resource type="Script" path="res://levels/tutorial/goal_area.gd" id="1_dc4dw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2tk6l"]
size = Vector2(64, 196)

[sub_resource type="Animation" id="Animation_uurqc"]
resource_name = "flicker"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 0, 0, 0.415686), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_si5t3"]
_data = {
"flicker": SubResource("Animation_uurqc")
}

[node name="GoalArea" type="Area2D"]
script = ExtResource("1_dc4dw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_2tk6l")
debug_color = Color(0, 0.647059, 0.176471, 0.419608)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -32.0
offset_top = -83.0
offset_right = 32.0
offset_bottom = 114.0
color = Color(1, 1, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_si5t3")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
